feat(feature/vta-702): added ids to buttons and titles of app

--- a/src/pages/confirmation-page/confirmation.html
+++ b/src/pages/confirmation-page/confirmation.html
@@ -10,15 +10,15 @@
     <img src="assets/tick-icon.svg" />
   </div>
   <div class="msg-centered">
-    <h3>{{message}}</h3>
-    <h3 *ngIf="additionalMessage">
+    <h3 id="confirmation-page-submitted-test-or-visit-text">{{message}}</h3>
+    <h3 id="confirmation-page-no-email-text" *ngIf="additionalMessage">
       {{additionalMessage}}<span (click)="callSupport()">{{additionalMessageButton}}</span>
     </h3>
   </div>
 </ion-content>
 <ion-footer padding-horizontal>
   <div class="footer-cta-section">
-    <button ion-button block (click)="pushPage()" color="secondary">
+    <button id="confirmation-page-done-btn" ion-button block (click)="pushPage()" color="secondary">
       <span>Done</span>
     </button>
   </div>
