--- a/src/pages/test-station/test-station-home/test-station-home.html
+++ b/src/pages/test-station/test-station-home/test-station-home.html
@@ -27,7 +27,7 @@
 </ion-content>
 <ion-footer>
   <div class="footer-cta-section">
-    <button ion-button block (click)="getStarted()" color="secondary">
+    <button id="get-started-btn" ion-button block (click)="getStarted()" color="secondary">
       <span>Get started</span>
       <img padding-left src="./assets/imgs/arrow-icon.svg" />
     </button>
