--- a/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
@@ -1,15 +1,16 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-buttons start>
-      <button ion-button (click)="close()" color="light">
+      <button id="identify-vehicle-cancel-btn" ion-button (click)="close()" color="light">
         Cancel
       </button>
     </ion-buttons>
-    <ion-title margin-left>
+    <ion-title id="identify-vehicle-title" margin-left>
       {{title}}
     </ion-title>
     <ion-buttons end>
-      <button ion-button class="custom-search-button" (click)="onSearchVehicle(searchVal)">
+      <button id="identify-vehicle-search-btn" ion-button class="custom-search-button"
+              (click)="onSearchVehicle(searchVal)">
         Search
       </button>
     </ion-buttons>
@@ -20,6 +21,7 @@
   <ion-item>
     <ion-input
       *ngIf="!appService.isAccessibilityTextZoomEnabled(); else accessibilityTextArea"
+      id="search-criteria-input"
       margin-top
       text-uppercase
       [ngModelOptions]="{standalone: true}"
@@ -47,7 +49,7 @@
   </ion-item>
 
   <ion-list-header padding-left padding-right text-uppercase>SEARCH CRITERIA</ion-list-header>
-  <button ion-item detail-none padding-left (click)="onChangeSearchCriteria()">
+  <button id="change-search-criteria-btn" ion-item detail-none padding-left (click)="onChangeSearchCriteria()">
     <ion-label>{{selectedSearchCriteria}}</ion-label>
     <div item-end>Change</div>
     <ion-icon item-end class="arrow-forward" name="arrow-forward"></ion-icon>
